--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ cffi==1.16.0
 charset-normalizer==3.3.2
 cryptography==42.0.7
 defusedxml==0.8.0rc2
+dj-database-url==2.2.0
 Django==4.2.8
 django-allauth==0.63.0
 django-ckeditor==6.7.0
@@ -12,17 +13,26 @@ django-countries==7.6.1
 django-js-asset==2.2.0
 django-taggit==5.0.1
 django-widget-tweaks==1.5.0
+et-xmlfile==1.1.0
+gunicorn==22.0.0
 idna==3.7
 importlib-metadata==7.0.1
 Markdown==3.4.1
+numpy==1.24.4
 oauthlib==3.2.2
+openpyxl==3.1.3
+packaging==24.1
+pandas==2.0.3
 Pillow==10.1.0
 psycopg2-binary==2.9.3
 pycparser==2.22
 PyJWT==2.8.0
+python-dateutil==2.9.0.post0
 python3-openid==3.2.0
+pytz==2024.1
 requests==2.31.0
 requests-oauthlib==2.0.0
+six==1.16.0
 social-auth-app-django==5.4.1
 social-auth-core==4.5.4
 sqlparse==0.4.4
