--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,16 @@ services:
   - type: web
     name: onlinestore
     env: python
+    buildCommand: "pip install --upgrade pip setuptools wheel && pip install -r requirements.txt"
     buildCommand: "pip install -r requirements.txt && python manage.py collectstatic --noinput"
     startCommand: "gunicorn onlinestore.wsgi:application"
+    staticPublishPath: staticfiles
+
+
+services:
+  - type: web
+    name: my-django-app
+    env: python
+    buildCommand: "pip install --upgrade pip setuptools wheel && pip install -r requirements.txt"
+    startCommand: "gunicorn myproject.wsgi:application"
     staticPublishPath: staticfiles
