--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 asgiref==3.7.2
-backports.zoneinfo==0.2.1; python_version<"3.9"
+backports.zoneinfo==0.2.1
 Brotli==1.1.0
 certifi==2024.2.2
 cffi==1.16.0
