--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,8 @@
-services:
-  - type: web
-    plan: free
-    name: onlinestore-app
-    runtime: python
-    buildCommand: "./build.sh"
-    startCommand: "gunicorn onlinestore.wsgi:application"
-    staticPublishPath: staticfiles
+#services:
+#  - type: web
+#    plan: free
+#    name: onlinestore-app
+#    runtime: python
+#    buildCommand: "./build.sh"
+#    startCommand: "gunicorn onlinestore.wsgi:application"
+#    staticPublishPath: staticfiles
